<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.theapache64.githubandroidsdkexample.activities.CreateCommentActivity"
    tools:showIn="@layout/activity_create_comment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:hint="@string/Authorization" />


        <EditText
            android:id="@+id/etOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/Owner" />

        <EditText
            android:id="@+id/etRepo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/Repo" />


        <EditText
            android:id="@+id/etIssueNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/Issue_Number"
            android:inputType="number" />

        <EditText
            android:id="@+id/etBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/Body" />

        <Button
            android:id="@+id/bCreateComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Create_Comment" />


    </LinearLayout>

</ScrollView>
